--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hazi Marble House!</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8009987419426257"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
